2007-07-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (@copying): new Back-Cover Text.

2007-07-06  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Info Directories): recommend columns 32
	and 48.  Suggestion from Antonio Diaz Diaz.

2007-07-05  Karl Berry  <karl@gnu.org>

	* texinfo.tex (\setnonasciicharscatcodenonglobal,
        \setnonasciicharscatcode): no newline after #1, that counts as a space.
	(\pagebody, \pagesizesyyy): likewise.

2007-07-03  Oleg Katsitadze  <olegkat@gmail.com>

	* doc/texinfo.tex: use \setcolor for color changes instead of
	\pdfsetcolor, to preserve color changes across page breaks.  Use a
	darker red (which comes out almost black in b&w print) for links
	and urls.

2007-07-02  Oleg Katsitadze  <olegkat@gmail.com>

	* doc/pdfcolor.tex: removed (merged with doc/texinfo.tex).
	* doc/texinfo.tex: merged doc/pdfcolor.tex, omitting unused colors.
	* doc/Makefile.am, doc/README, doc/texinfo.txi, util/srclist.txt:
	removed any mention of pdfcolor.tex.

	* doc/texinfo.tex (\chapmacro):  avoid potential breakpoint at
	interline glue between \pdfdest and the heading.
	(\safewhatsit): typo.

2007-07-01  Karl Berry  <karl@gnu.org>

	* pretest version 4.9.90.
	
	* COPYING, all source files: GPLv3.

	* makeinfo/makeinfo.c,
	* info/info.c,
	* info/infokey.c,
	* util/install-info.c,
	* util/texindex.c: update --version output.

	* Makefile.am (EXTRA_DIST): remove config.rpath, it's in build-aux now.
	* lib/Makefile.am (libtxi_A_SOURCES): system.h at top level now.
	
	* util/texi2dvi (move_to_dest): still more tweaks to try avoid
	complaints from cp and cmp.

	* makeinfo/tests/copying.txi: test with nonempty copying text.
	* makeinfo/insertion.c (cm_insert_copying): call output_head.

2007-06-29  Karl Berry  <karl@gnu.org>

	* Version 4.9 (GPLv3, made from 4.8 branch).

2007-06-29  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (move_to_dest): do not cmp a directory.

2007-06-27  Karl Berry  <karl@gnu.org>
