@@ -223,10 +223,6 @@ DECLARE (int, process_tex, 0);
 /* Nonzero means that we process @xml and @ifxml.  (--ifxml) */
 DECLARE (int, process_xml, 0);
 
-/* Maximum number of references to a single node before complaining.
-   (--reference-limit) */
-DECLARE (int, reference_warning_limit, 1000);
-
 /* Default is to check node references.  (--no-validate) */
 DECLARE (int, validating, 1);
 
